Source/WebCore/platform/network/qt/QNetworkReplyHandler.h
@@ -35,29 +35,49 @@ namespace WebCore {
 
 class ResourceHandle;
 class ResourceResponse;
+class QNetworkReplyHandler;
+
+class QNetworkReplyHandlerCallQueue {
+public:
+    QNetworkReplyHandlerCallQueue(QNetworkReplyHandler*, bool deferSignals);
+    bool deferSignals() const { return m_deferSignals; }
+    void setDeferSignals(bool);
+
+    typedef void (QNetworkReplyHandler::*EnqueuedCall)();
+    void push(EnqueuedCall method);
+    void clear() { m_enqueuedCalls.clear(); }
+
+    void lock();
+    void unlock();
+private:
+    QNetworkReplyHandler* m_replyHandler;
+    int m_locks;
+    bool m_deferSignals;
+    bool m_flushing;
+    QList<EnqueuedCall> m_enqueuedCalls;
+
+    void flush();
+};
 
 class QNetworkReplyWrapper : public QObject {
     Q_OBJECT
 public:
-    QNetworkReplyWrapper(QNetworkReply*, QObject* parent = 0);
+    QNetworkReplyWrapper(QNetworkReplyHandlerCallQueue*, QNetworkReply*, QObject* parent = 0);
     ~QNetworkReplyWrapper();
 
     QNetworkReply* reply() const { return m_reply; }
     QNetworkReply* release();
 
+    void synchronousLoad() { receiveMetaData(); }
+
     QUrl redirectionTargetUrl() const { return m_redirectionTargetUrl; }
     QString encoding() const { return m_encoding; }
     QString advertisedMimeType() const { return m_advertisedMimeType; }
 
-Q_SIGNALS:
-    void finished();
-    void metaDataChanged();
-    void readyRead();
-    void uploadProgress(qint64 bytesSent, qint64 bytesTotal);
-
 private Q_SLOTS:
     void receiveMetaData();
     void didReceiveFinished();
+    void didReceiveReadyRead();
 
 private:
     void resetConnections();
@@ -67,6 +87,8 @@ private:
 
     QString m_encoding;
     QString m_advertisedMimeType;
+
+    QNetworkReplyHandlerCallQueue* m_queue;
 };
 
 class QNetworkReplyHandler : public QObject
@@ -79,13 +101,15 @@ public:
     };
 
     QNetworkReplyHandler(ResourceHandle*, LoadType, bool deferred = false);
-    void setLoadingDeferred(bool);
+    void setLoadingDeferred(bool deferred) { m_queue.setDeferSignals(deferred); }
 
     QNetworkReply* reply() const { return m_replyWrapper ? m_replyWrapper->reply() : 0; }
 
     void abort();
 
     QNetworkReply* release();
+
+    void synchronousLoad();
 
 public slots:
     void finish();
@@ -97,7 +121,6 @@ private:
     void start();
     void resetState();
     String httpMethod() const;
-    void resumeDeferredLoad();
     void redirect(ResourceResponse&, const QUrl&);
     bool wasAborted() const { return !m_resourceHandle; }
     QNetworkReply* sendNetworkRequest();
@@ -105,20 +128,15 @@ private:
     QNetworkReplyWrapper* m_replyWrapper;
     ResourceHandle* m_resourceHandle;
     bool m_redirected;
-    bool m_responseSent;
     bool m_responseContainsData;
     LoadType m_loadType;
     QNetworkAccessManager::Operation m_method;
     QNetworkRequest m_request;
 
-    bool m_deferred;
-
     // defer state holding
-    bool m_hasStarted;
-    bool m_callFinishOnResume;
-    bool m_callSendResponseIfNeededOnResume;
-    bool m_callForwardDataOnResume;
     int m_redirectionTries;
+
+    QNetworkReplyHandlerCallQueue m_queue;
 };
 
 // Self destructing QIODevice for FormData
